# immersive-vr

./: .gitattributes  .gitignore  AudioManager.gd  AudioManager.gd.uid  AudioManager.tscn  Character.glb  Character.glb.import  Character_brown_eye.png.import  Character_female_sportsuit01_diffuse.png.import  Character_middleage_darkskinned_female_diffuse.png.import  Character_short04_diffuse.png.import  Client.gd  Client.gd.uid  Main.gd  Main.tscn  README.md  Server.gd  Server.gd.uid  Stand To Sit-3.fbx  Stand To Sit-3.fbx.import  Stand To Sit-3_0.png.import  Stand To Sit-3_1.png.import  Stand To Sit-3_2.png.import  Stand To Sit-3_3.png.import  Stand To Sit-3_4.png.import  Stand To Sit-3_5.png.import  Stand To Sit.fbx  Stand To Sit.fbx.import  avatar1.fbx.import  avatar1.glb.import  avatar1_Ch07_1001_Diffuse.png.import  avatar1_Ch07_1001_Glossiness.png.import  avatar1_Ch07_1001_Normal.png.import  avatar1_Ch07_1001_Specular.png.import  avatar1_Ch07_1002_Diffuse.png.import  avatar1_Ch07_1002_Normal.png.import  avatar2.fbx  avatar2.fbx.import  base_scene.tscn  call_transcribe.tscn  (+32 more)
Animation/: 3dbodytest.tscn  avatar.gd  avatar.gd.uid  avatar1.glb  avatar1.glb.import  avatar1_Ch07_1001_Diffuse.png.import  avatar1_Ch07_1001_Glossiness.png.import  avatar1_Ch07_1001_Normal.png.import  avatar1_Ch07_1001_Specular.png.import  avatar1_Ch07_1002_Diffuse.png.import  avatar1_Ch07_1002_Normal.png.import  character_body_3dtest.tscn
Avatar/: AvatarConfig.gd.uid  AvatarPreview.tscn  AvatarTest.glb.import  AvatarTest.tscn  AvatarTest_brown_eye.png.import  AvatarTest_female_elegantsuit01_diffuse.png.import  AvatarTest_female_elegantsuit01_normal.png.import  AvatarTest_middleage_lightskinned_female_diffuse.png.import  AvatarTest_ponytail01_diffuse.png.import  AvatarTest_shoes01_diffuse.png.import  AvatarTest_shoes01_normal.png.import
Main/: MainDesktop.tscn  MainPreview.gd  MainPreview.tscn  MainVR.tscn  PreviewStage.tscn
Scene/: AvatarCustomizer.tscn  MainPreview.tscn  SelectEnvironment.tscn
UI/: AvatarCustomizer.gd  AvatarCustomizer.tscn  AvatarUITheme.tres  ClarityCard.tscn  DialogueCafe.tscn  SelectEnvironment.gd  SelectEnvironment.tscn
VR/: VRDemo.tscn  VRPanel.gd.uid  VRPanel.tscn
assets/: Remy.fbx  Remy.fbx.import  Remy_0.png.import  Remy_1.png.import  Remy_10.png.import  Remy_11.png.import  Remy_12.png.import  Remy_13.png.import  Remy_14.png.import  Remy_15.png.import  Remy_16.png.import  Remy_17.png.import  Remy_18.png.import  Remy_19.png.import  Remy_2.png.import  Remy_20.png.import  Remy_21.png.import  Remy_3.png.import  Remy_4.png.import  Remy_5.png.import  Remy_6.png.import  Remy_7.png.import  Remy_8.png.import  Remy_9.png.import  Remy_alpha_0.png.import  Remy_alpha_1.png.import  X Bot.fbx  X Bot.fbx.import  Y Bot.fbx  Y Bot.fbx.import  glass_shader.gdshader  glass_shader.gdshader.uid  logo_large_color_dark.png.import  metaHumanHead_52shapekeys_01.fbx  metaHumanHead_52shapekeys_01.fbx.import  splash.png.import
immersive-vr/: icon.svg.import  project.godot
scenes/: InteractArea_bigsofa.gd  InteractArea_bigsofa.gd.uid  Interactables.gd  InteractionPoint.tscn  audio_manager.tscn  camera_3d.gd  camera_3d.gd.uid  environment.tscn  fbt.tscn  (+8 more)
tools/transcript_asr/: .env.example  pyproject.toml  requirements.txt
tools/transcript_asr/api/: main.py
tools/transcript_asr/asr/: diarize.py  docx_export.py  merge.py  transcribe.py
tools/transcript_asr/cli/: transcribe_cli.py
tools/transcript_asr/evaluation/: build_librispeech_30min.py  evaluate_wer.py  librispeech_local_eval.py
(+1948 files in other folders)
