[project]
name = "transcript-asr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "alembic==1.18.4",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "asteroid-filterbanks==0.4.0",
    "attrs==25.4.0",
    "av==16.1.0",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorlog==6.10.1",
    "contourpy==1.3.3",
    "ctranslate2==4.7.1",
    "cycler==0.12.1",
    "datasets==4.6.1",
    "dill==0.4.0",
    "dotenv>=0.9.9",
    "einops==0.8.2",
    "fastapi==0.135.2",
    "faster-whisper==1.2.1",
    "filelock==3.25.0",
    "flatbuffers==25.12.19",
    "fonttools==4.62.1",
    "frozenlist==1.8.0",
    "fsspec==2026.2.0",
    "googleapis-common-protos==1.74.0",
    "grpcio==1.80.0",
    "h11==0.16.0",
    "hf-xet==1.3.2",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.5.0",
    "idna==3.11",
    "importlib-metadata==8.7.1",
    "jinja2==3.1.6",
    "jiwer==4.0.0",
    "joblib==1.5.3",
    "julius==0.2.7",
    "kiwisolver==1.5.0",
    "lightning==2.6.1",
    "lightning-utilities==0.15.3",
    "lxml==6.0.2",
    "mako==1.3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "multidict==6.7.1",
    "multiprocess==0.70.18",
    "networkx==3.6.1",
    "numpy==2.4.2",
    "onnxruntime==1.24.2",
    "opentelemetry-api==1.40.0",
    "opentelemetry-exporter-otlp==1.40.0",
    "opentelemetry-exporter-otlp-proto-common==1.40.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.40.0",
    "opentelemetry-exporter-otlp-proto-http==1.40.0",
    "opentelemetry-proto==1.40.0",
    "opentelemetry-sdk==1.40.0",
    "opentelemetry-semantic-conventions==0.61b0",
    "optuna==4.8.0",
    "packaging==26.0",
    "pandas==3.0.1",
    "pillow==12.1.1",
    "primepy==1.3",
    "propcache==0.4.1",
    "protobuf==6.33.6",
    "pyannote-audio==4.0.4",
    "pyannote-core==6.0.1",
    "pyannote-database==6.1.1",
    "pyannote-metrics==4.0.0",
    "pyannote-pipeline==4.0.0",
    "pyannoteai-sdk==0.4.0",
    "pyarrow==23.0.1",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.2.0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.22",
    "pytorch-lightning==2.6.1",
    "pytorch-metric-learning==2.9.0",
    "pyyaml==6.0.3",
    "rapidfuzz==3.14.3",
    "requests==2.32.5",
    "rich==14.3.3",
    "safetensors==0.7.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "setuptools==82.0.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sortedcontainers==2.4.0",
    "soundfile==0.13.1",
    "sqlalchemy==2.0.49",
    "starlette==1.0.0",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.2",
    "torch==2.9.1",
    "torch-audiomentations==0.12.0",
    "torch-pitch-shift==1.2.5",
    "torchaudio==2.9.1",
    "torchcodec==0.9",
    "torchmetrics==1.9.0",
    "torchvision==0.24.1",
    "tqdm==4.67.3",
    "typer==0.24.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uvicorn==0.42.0",
    "xxhash==3.6.0",
    "yarl==1.23.0",
    "zipp==3.23.0",
]
